add encoded file patch functionality
